--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,4 +24,18 @@
         <servlet-name>userServlet</servlet-name>
         <url-pattern>/userServlet</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>encodeFilter</filter-name>
+        <filter-class>com.h.servlet.EncodeFilter</filter-class>
+        <init-param>
+            <param-name>encode</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodeFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
